Closed Bug 959070 Opened 10 years ago Closed 10 years ago

Intermittent TEST-UNEXPECTED-FAIL | /tests/content/events/test/test_bug667612.html | application terminated with exit code 1 | PROCESS-CRASH | /tests/content/events/test/test_bug667612.html | application crashed [@ mozilla::dom::workers::WorkerRunnable::R

Categories

(Core :: DOM: Workers, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29
Tracking Status
firefox27 --- unaffected
firefox28 --- unaffected
firefox29 --- fixed
firefox-esr24 --- unaffected

People

(Reporter: cbook, Assigned: khuey)

References

()

Details

(Keywords: assertion, crash, intermittent-failure)

Attachments

(1 file)

Rev4 MacOSX Snow Leopard 10.6 mozilla-inbound debug test mochitest-1 on 2014-01-12 16:44:24 PST for push 5cae5d9ef313

slave: talos-r4-snow-153

https://tbpl.mozilla.org/php/getParsedLog.php?id=32898850&tree=Mozilla-Inbound



Assertion failure: IsCanceled() (Subclass Cancel() didn't set IsCanceled()!), at ../../../dom/workers/WorkerRunnable.cpp:276

TEST-UNEXPECTED-FAIL | /tests/content/events/test/test_bug667612.html | application terminated with exit code 1
PROCESS-CRASH | /tests/content/events/test/test_bug667612.html | application crashed [@ mozilla::dom::workers::WorkerRunnable::Run()]

17:09:26  WARNING -  PROCESS-CRASH | /tests/content/events/test/test_bug667612.html | application crashed [@ mozilla::dom::workers::WorkerRunnable::Run()]
17:09:26     INFO -  Crash dump filename: /var/folders/sv/svofkpmvFl8nyyeVp9MjRU+++-k/-Tmp-/tmp3g5l2K/minidumps/D3E3E826-0039-4EE3-8134-4473FC1D7C30.dmp
17:09:26     INFO -  Operating system: Mac OS X
17:09:26     INFO -                    10.6.8 10K549
17:09:26     INFO -  CPU: amd64
17:09:26     INFO -       family 6 model 23 stepping 10
17:09:26     INFO -       2 CPUs
17:09:26     INFO -  Crash reason:  EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
17:09:26     INFO -  Crash address: 0x0
17:09:26     INFO -  Thread 48 (crashed)
17:09:26     INFO -   0  XUL!mozilla::dom::workers::WorkerRunnable::Run() [WorkerRunnable.cpp:5cae5d9ef313 : 245 + 0x0]
17:09:26     INFO -      rbx = 0x00007fff70a332f8   r12 = 0x0000000000000000
17:09:26     INFO -      r13 = 0x0000000000000001   r14 = 0x0000000148a93360
17:09:26     INFO -      r15 = 0x0000000000000000   rip = 0x0000000102b529e3
17:09:26     INFO -      rsp = 0x0000000149e00390   rbp = 0x0000000149e00450
17:09:26     INFO -      Found by: given as instruction pointer in context
17:09:26     INFO -   1  XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:5cae5d9ef313 : 637 + 0x5]
17:09:26     INFO -      rbx = 0x0000000148a93320   r12 = 0x0000000000000000
17:09:26     INFO -      r13 = 0x0000000149e00498   r14 = 0x0000000148a93360
17:09:26     INFO -      r15 = 0x0000000000000000   rip = 0x000000010189bac2
17:09:26     INFO -      rsp = 0x0000000149e00460   rbp = 0x0000000149e00510
17:09:26     INFO -      Found by: call frame info
17:09:26     INFO -   2  XUL!NS_ProcessPendingEvents(nsIThread*, unsigned int) [nsThreadUtils.cpp:5cae5d9ef313 : 210 + 0xe]
17:09:26     INFO -      rbx = 0x000000014926f3d0   r12 = 0x0000000148a93320
17:09:26     INFO -      r13 = 0x0000000149e00527   r14 = 0x00000000ffffffff
17:09:26     INFO -      r15 = 0x0000000000233f6c   rip = 0x0000000101811e8d
17:09:26     INFO -      rsp = 0x0000000149e00520   rbp = 0x0000000149e00550
17:09:26     INFO -      Found by: call frame info
17:09:26     INFO -   3  XUL!mozilla::dom::workers::WorkerPrivate::ClearMainEventQueue() [WorkerPrivate.cpp:5cae5d9ef313 : 4570 + 0xc]
17:09:26     INFO -      rbx = 0x000000014926f3d0   r12 = 0x000000014926f3d0
17:09:26     INFO -      r13 = 0x0000000000000000   r14 = 0x0000000148a93320
17:09:26     INFO -      r15 = 0x0000000000000004   rip = 0x0000000102b3be49
17:09:26     INFO -      rsp = 0x0000000149e00560   rbp = 0x0000000149e00570
17:09:26     INFO -      Found by: call frame info
17:09:26     INFO -   4  XUL!mozilla::dom::workers::WorkerPrivate::NotifyInternal(JSContext*, mozilla::dom::workers::Status) [WorkerPrivate.cpp:5cae5d9ef313 : 5108 + 0x7]
17:09:26     INFO -      rbx = 0x0000000000000001   r12 = 0x000000014926f3d0
17:09:26     INFO -      r13 = 0x0000000000000000   r14 = 0x0000000000000001
17:09:26     INFO -      r15 = 0x0000000000000004   rip = 0x0000000102b3aad6
17:09:26     INFO -      rsp = 0x0000000149e00580   rbp = 0x0000000149e005c0
17:09:26     INFO -      Found by: call frame info
Component: General → DOM: Workers
This is a stupid mistake.
Assignee: nobody → khuey
Attached patch PatchSplinter Review
I forgot to call the base class Cancel method.
Attachment #8359298 - Flags: review?(Jan.Varga)
Attachment #8359298 - Flags: review?(Jan.Varga) → review+
https://hg.mozilla.org/mozilla-central/rev/ae9fa8351a6a
Status: NEW → RESOLVED
Closed: 10 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: