Bug 959070: Make sure to call ScriptExecutorRunnable's base class's Cancel method too. r=janv